# patterns_library

cpp/: .editorconfig  .gitignore  CMakeLists.txt  common.h  main.cpp  main_decorator.cpp  main_sequences_methods.cpp
cpp/InterfaceVsAbstractCpp/: main_interface.cpp
cpp/decorator/: DbConnection.h  DbConnectionOverSSH.cpp  DbConnectionOverSSH.h  DecorationDbConnection.h  PgSQLConnection.cpp  PgSQLConnection.h  decorator.puml
cpp/fabrica/: CheesePizza.cpp  CheesePizza.h  PepperoniPizza.cpp  PepperoniPizza.h  Pizza.h  PizzaStore.cpp  PizzaStore.h  SimplePizzaFactory.cpp  SimplePizzaFactory.h  fabrica.puml  main_fabrica.cpp
cpp/observer/: DisplayElement.h  ForecastDisplay.cpp  ForecastDisplay.h  Observer.h  StatisticDisplay.cpp  StatisticDisplay.h  WeatherApp.h  WeatherAppMoscow.cpp  WeatherAppMoscow.h
cpp/strategy/: Duck.cpp  Duck.h  FlyBehavior.h  FlyByRocket.cpp  FlyByRocket.h  FlyByWings.cpp  FlyByWings.h  MallardDuck.cpp  MallardDuck.h  QuackBehavior.h  QuackSilent.cpp  QuackSilent.h  QuackVoice.cpp  QuackVoice.h  main_strategy.cpp
